@@ -9,23 +9,23 @@ EBUILD stevedore-0.15-r1.ebuild 1350 SHA256 a6292731d16ee3dbe2134886204048960182
 EBUILD stevedore-0.15.ebuild 1347 SHA256 0528b44442f3e452b04f312e85b20d87919aa4e055fe6c467fdf202739812a80 SHA512 0fe55cd852bdb9f5686d69693d7ed7cb9a5c6b7be34ec1ab371012b8220182ab86aa5f987e103b39913606f3a023d17ba5fa17200f1110a8de49eac668d49c0c WHIRLPOOL c3d82a923176e5286b275dae4d9a36ff459773a4b67400518aec5d54c2277666d7d10dcc9805e24b23e2ece521273eaf4f43cd842d342d8c2486b1a935feb1b1
 EBUILD stevedore-1.0.0.ebuild 1199 SHA256 5da184a05075aeef045e1ef0044e7f300132d94ac9e448be55c318b0a58459f7 SHA512 71cc20e49aee7581f183ddda9c7e54115d028f4ef815f29b0138dab265190d20a2c3713586007a15206558bb03ca821e2629946592565dba29a86de25113150e WHIRLPOOL e470dcbb9a68d6e9e29986ff7d6b24759ba0f40c0ed51664d0d2b238487eb0703136086e6c2aacebb396d2e32e862e8228448456ad66cf738d03c3443223c795
 EBUILD stevedore-1.1.0.ebuild 1283 SHA256 9d8f3d46974b79cd5234597fa10d163e43f1ab3133dee2035552e4f5d82c6fb6 SHA512 4217f0e06d8458e03cf47a528f6d68b7bbda5370f1981d332bd0280b433ceec3072766125ca040627fb06647fcaa4cc2afba0386ef640761555c9e5292fe8dd3 WHIRLPOOL d8f0f862f3b1d600e5d6f41cacd7e1e99e4b5f6065a9cdacd58a269340a9a449299e0d3669ac2f1e0dd55f1ddc2f4960b39c54416d73fe61b61a18d74bb2dbc8
-EBUILD stevedore-1.3.0.ebuild 1499 SHA256 1c99bd520a95d6964c44392e016457d1be58bf49143dcbd82b67e22e64565f44 SHA512 a3e88307f97e2accaac80d7b43ba635eb2809fa6d435f4b0e51d585cc3fff7dea8844601f2467c83ad62173f547c806e2338fd2c425bc70588fa26d472164e96 WHIRLPOOL 102bec09fb64bf6424dca69cebbf7ca4d483e70d46f14ce2a5071137d40e3e25a3198232de6ec4836c9fbf4a3552db517497196ff6b4cb1099856ae6082a073a
-MISC ChangeLog 3886 SHA256 f7c18144ea580d1306616ed594e29a6f9fd4d48024e31ff0cf237c76e2fce309 SHA512 b0e42ff1f4012cfbd1c091880263ab685bb23d9023c14820ba78cc148b471d72dfe2a754d16f77dd4915eff7ace84e6b2026e243e393c4b3c852506fbb72ed56 WHIRLPOOL 27f1c57089b090109417a332bdea51fbac2d20a31c71bdc38b406fad064c638758f1f78a6bca1be7d8eda58c4a4216f4e8a65c8fc8a63086272dab300afb9ca6
+EBUILD stevedore-1.3.0.ebuild 1517 SHA256 31152acf7821c98ed70f5dd2ea6c058bf9a075e391dadfe646f80d96c71a81a6 SHA512 08cbab3af5ec3a1360d735125819e79d9798e4efa1be478eb318affafb4da3f100c6b1aa3c67a8f95dc251277ad0339aca84fde7216823e60871e39d008b1acb WHIRLPOOL c33b35fc8c54cafc361e034fa5056d27e57240d3544b7ec3ec99c6d9f31d43b4b44ff4973b7b42418d09cebc9564b6d301ae29967672511fb01363327ca2b5c8
+MISC ChangeLog 3988 SHA256 177e45fbd3f71c716fa08292570e8c7593acf7e03815d5e53a2e387f3f5a5d12 SHA512 8011c7e1423ce03ed66a276c4923e2db9364fa2f18f538f383b1addb2ec785566f2e986a5a37de770edf1a513155d6721a4aba7639aaa96cfeeda7f2869c4acf WHIRLPOOL 0dcbf4b7c11e0687659c28850d86034de79c9af7176cfd779e98ec0ff0723389233ab56041e09ff81e804caf75df7112cd149af87cd17751979e3b8d04ed47db
 MISC metadata.xml 184 SHA256 b67498b2e8a23231c21fae68b40dc394a2db020c97386a184794f56c57702f48 SHA512 b4178663f81df70d1964febb21ffaaeb5075f62a257428dfb4f37c4ff5372de52a52316526f4f530849d7011cd18a9694d7aaf86ef63511ce40edbd21fb047ac WHIRLPOOL 094a20d8c236e28bca0050a2152ed5de45aba5fd103c113f49f07a8a532b751945cc8d1599368b381827377a75c50b25b2007ffb794a79d5d427d6c990b3ab02
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVEwH3AAoJEGSje+quGaToMoIP/iaRVW7zQiILyZgS3nE9VzKf
-sjdXj91IMPmcdJ6PkvxNHFYenSc+GEx/2GOYwR16vGTYOh620c0+UpMgK+MVYNd+
-Qpq1yLUT298c/jz2RM3Mn6L4QgzzKToGPEfH9c3EADtpwJHun6D7uvgLTaqELv/c
-tj50GaSRXP+CN/MulDS9w+nV4KsqSkrUb91MOoVjPAyTKvN5rilpPm7gH1Qtnvos
-9YrLv3nuZycdHN2Vd0fFSFm+l1tSutnwXeFenWwCnx7jTAGhXxKcd1ZlxNs7kzYG
-kedPrzsR64WQ5V0iI1ba+/SuKXuiHYjnJ5tL2l4IEAYKTolVPFfwYct/pWTsvad8
-QDYdx6NiE+w5WouUGcwqMfEE+94Xzic0Uy9dpd45sgA06FWfTzpkegXIpVY4dDwt
-IHw516Qxm7DM8jhyjIm3JQtE51KUK8pm3wE9y6dCEq2BoCSw9einpQsVMhToe5z9
-cEUmHfsltP9gD/KqJIe2eTZpY1VujjgH8D/opkldbMVbbuIsEMQwEKeVop3goYak
-HyDzQlL8M0lgHlgrRgJaHAOT7QAspxFj6oew1sNxRiq/tkluLSHESo4NlAqNzNNT
-ZzxlnMgEu9NqhQkVB0xcMB89BqckEHjisnAChGSL46vyzy3r2LqZoMk7zWeExY8o
-XG/eped7ygOMRRmLewN2
-=wX0O
+iQIcBAEBCAAGBQJVH0ROAAoJEGSje+quGaTo2FQQAK/MZyYtsl6H7OdpRc65drmS
+IEMmEs60W/i+RRJJ960zTUJy/UiPBJQHPIkEjAyKQRcZWWV3Tp6qw96jxemSCvIp
+xGeM/j2y3spgEoB/xL+s+4qoa8kwzifWzRS/SQK1dyaL3EvdyW7b4s833rBUcbXI
+hXc4cgvl54BXo1QQ27KQXHIeuK4nPy8rVQb9WF2JVqgiYh6jnjANGVQfunjGduQJ
+OZuUgAbVpi1BdLirUSpyqj748MzQ0BXnBvXqVm01Zh1afRZ3/zJQepyrcnRKGNJw
+BpM0MPneG9/D/DaDVTYp1EF+0u2JzReySh7V4TwqLcXAQJuP/Kt7TrY6xn9xwogB
+x0SFR5ozfgx9BxtuMGAoYdAI8qXpkG2F6lSPioQPna70I1c4+VvmrZwqRlPTnJDb
+WTVQvpHmB9HkbFEfMRz+YxFzdwx1BsRUVn+e2VoHSw4I1M/IzWFKniz/TSMgOdDq
+/zSGWDvgfS8K/Qnc9IWzswp/TM2bgi7I4qWyXoy809lLsaiaZZnNrlPSPNdsMQOr
+cA+BSqrhPJWZ+k2S1aet5hq0LyoNdFfgn+2yzZCDYHs9H1LrgXu2QHYpIJIgYpDn
+xdICOv/Mq4NNCaySN8qy/PhyT9juAlRbYQKdiSzt/b2F4n44zpuDw4DPGUfqQ5Lt
+gQ8lZ0mNHgYk57Mk2SuM
+=IDTP
 -----END PGP SIGNATURE-----
