@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/stevedore
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/stevedore/ChangeLog,v 1.27 2015/03/25 18:43:56 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/stevedore/ChangeLog,v 1.28 2015/04/04 01:54:21 prometheanfire Exp $
+
+  04 Apr 2015; Matthew Thode <prometheanfire@gentoo.org> stevedore-1.3.0.ebuild:
+  fixing doc builds
 
 *stevedore-1.3.0 (25 Mar 2015)
 
